# RustCraft

./: Cargo.toml
src/: app.rs  main.rs  shader.wgsl  texture.rs  vertex.rs  window.rs
src/camera/: camera.rs  camera_controller.rs  camera_state.rs  camera_uniform.rs  mod.rs  projection.rs
src/inputs/: action.rs  keybinds.rs  mod.rs
