[package]
name = "rustcraft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
console_log = "1.0"
env_logger = "0.11.11"
pollster = "0.4.0"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
wgpu = "30.0.0"
winit = "0.30.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "28.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
